force-app/main/default/objects/Actuals_Record__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <description>Resolved lookup to the Account matching the advertiser name on the order. Null when no Account name matches Advertiser_Name__c.</description>
    <label>Advertiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actuals Records</relationshipLabel>
    <relationshipName>Actuals_Records_Advertiser</relationshipName>
    <type>Lookup</type>
</CustomField>