force-app/main/default/objects/Actuals_Record__c/fields/Advertiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Name__c</fullName>
    <label>Advertiser Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Raw advertiser name string from the Counterpoint CSV. Used for display and for matching to an Account record.</description>
</CustomField>