force-app/main/default/objects/Actuals_Record__c/fields/Advertising_Contract__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Contract__c</fullName>
    <description>Optional link to the Advertising Contract this order line reconciles against. Populated during the reconciliation process, not during initial ingestion.</description>
    <label>Advertising Contract</label>
    <referenceTo>Advertising_Contract__c</referenceTo>
    <relationshipLabel>Actuals Records</relationshipLabel>
    <relationshipName>Actuals_Records</relationshipName>
    <type>Lookup</type>
</CustomField>