force-app/main/default/objects/Actuals_Record__c/fields/AE_Code__c.field-meta.xml
<CustomField>
    <fullName>AE_Code__c</fullName>
    <label>AE Code</label>
    <type>Text</type>
    <length>50</length>
    <description>Account Executive code from the Counterpoint AE column.</description>
</CustomField>