force-app/main/default/objects/Actuals_Record__c/fields/Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission__c</fullName>
    <description>Agency commission amount. Sourced from the Agency_Commission column in the file when present; otherwise computed as Gross_Revenue minus Net_Revenue during ingestion.</description>
    <label>Agency Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>