force-app/main/default/objects/Actuals_Record__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <label>Agency Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Raw agency name string from the Counterpoint CSV.</description>
</CustomField>