force-app/main/default/objects/Actuals_Record__c/fields/Broadcast_Date__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Date__c</fullName>
    <description>Broadcast-calendar air date from the Counterpoint broadcast-date file variant. Broadcast weeks begin on Monday per Nielsen convention. Populated when Date_Type__c is Broadcast.</description>
    <label>Broadcast Date</label>
    <type>Date</type>
</CustomField>