force-app/main/default/objects/Actuals_Record__c/fields/Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Date__c</fullName>
    <label>Calendar Date</label>
    <type>Date</type>
    <description>First day of the calendar month this actual covers. Populated when Date_Type__c = Calendar; null when Date_Type__c = Broadcast. Parsed from the Period column in the Counterpoint CSV (formats: MM/YYYY, YYYY-MM, or full ISO date).</description>
</CustomField>