force-app/main/default/objects/Actuals_Record__c/fields/Counterpoint_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Counterpoint_Order_ID__c</fullName>
    <description>Unique order identifier from Counterpoint (Order_ID column). Used as the external ID for upsert — re-running the same file does not create duplicates.</description>
    <externalId>true</externalId>
    <label>Counterpoint Order ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>