force-app/main/default/objects/Actuals_Record__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <description>Indicates which date field governs this actuals record. Calendar = standard Gregorian date in Calendar_Date__c; Broadcast = broadcast-calendar date in Broadcast_Date__c. Detected automatically from the Counterpoint file header.</description>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>