force-app/main/default/objects/Actuals_Record__c/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <description>Gross revenue amount from the Counterpoint order line, before agency commission.</description>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>