force-app/main/default/objects/Actuals_Record__c/fields/Import_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_Batch_ID__c</fullName>
    <label>Import Batch ID</label>
    <type>Text</type>
    <length>36</length>
    <description>UUID assigned by CounterpointIngestionService at import time. All rows from the same file upload share this ID, making it easy to query or rollback a single import run.</description>
</CustomField>