force-app/main/default/objects/Actuals_Record__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Geographic market from the Counterpoint order (e.g., Miami, Los Angeles, Houston).</description>
    <label>Market</label>
    <length>100</length>
    <type>Text</type>
</CustomField>