force-app/main/default/objects/Actuals_Record__c/fields/Match_Notes__c.field-meta.xml
<CustomField>
    <fullName>Match_Notes__c</fullName>
    <description>Human-readable explanation of any unresolved lookups (e.g., "Station not found: WXYZ; Vehicle not found: BMF"). Empty when Status__c is Matched.</description>
    <label>Match Notes</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>