force-app/main/default/objects/Actuals_Record__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <description>Net revenue amount from the Counterpoint order line, after agency commission.</description>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>