force-app/main/default/objects/Actuals_Record__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Advertising_Opportunity__c</referenceTo>
    <relationshipLabel>Actuals Records</relationshipLabel>
    <relationshipName>Actuals_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Advertising Opportunity from which this import was triggered via the quick action. Allows filtering actuals by deal context.</description>
</CustomField>