force-app/main/default/objects/Actuals_Record__c/fields/Period_Raw__c.field-meta.xml
<CustomField>
    <fullName>Period_Raw__c</fullName>
    <label>Period (Raw)</label>
    <type>Text</type>
    <length>100</length>
    <description>Verbatim period string from the Counterpoint CSV before date parsing. Preserved for debugging when Calendar_Date__c or Broadcast_Date__c cannot be populated.</description>
</CustomField>