force-app/main/default/objects/Actuals_Record__c/fields/Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount__c</fullName>
    <label>Revenue Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Net revenue amount from the Counterpoint Amount column. Currency symbols and commas are stripped during parsing.</description>
</CustomField>