force-app/main/default/objects/Actuals_Record__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Text</type>
    <length>100</length>
    <description>Revenue type code from the Counterpoint Type column (e.g. Local, National, Political).</description>
</CustomField>