force-app/main/default/objects/Actuals_Record__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <description>Name of the Counterpoint file from which this record was ingested. Used for audit and re-processing.</description>
    <label>Source File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>