force-app/main/default/objects/Actuals_Record__c/fields/Source_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Name__c</fullName>
    <label>Source File Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Title of the ContentVersion (uploaded file) that produced this row. Useful for tracing a record back to its source export.</description>
</CustomField>