force-app/main/default/objects/Actuals_Record__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <description>Resolved lookup to the Channel__c record matching the station code on the order. Null when no Channel__c record matches Station_Code__c.</description>
    <label>Station</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Actuals Records</relationshipLabel>
    <relationshipName>Actuals_Records</relationshipName>
    <type>Lookup</type>
</CustomField>