force-app/main/default/objects/Actuals_Record__c/fields/Station_Code__c.field-meta.xml
<CustomField>
    <fullName>Station_Code__c</fullName>
    <label>Station Code</label>
    <type>Text</type>
    <length>50</length>
    <description>Broadcast station identifier from the Counterpoint CSV (e.g. KUVN, WLTV).</description>
</CustomField>