force-app/main/default/objects/Actuals_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Ingestion match status. Matched = all three lookups (Station, Advertiser, Vehicle) resolved. Unmatched = one or more lookups failed. Error = record could not be processed.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>