force-app/main/default/objects/Actuals_Record__c/fields/Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error__c</fullName>
    <label>Validation Error</label>
    <type>TextArea</type>
    <description>Human-readable reason this row was marked Invalid or Duplicate. Populated by CounterpointIngestionService (parse failures) and CounterpointIngestionBatch (duplicate detection).</description>
</CustomField>