force-app/main/default/objects/Actuals_Record__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <type>Picklist</type>
    <description>Lifecycle status set by CounterpointIngestionService (Pending/Invalid/Duplicate) and updated by CounterpointIngestionBatch (Processed/Duplicate).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Processed</fullName><default>false</default><label>Processed</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
            <value><fullName>Invalid</fullName><default>false</default><label>Invalid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>