force-app/main/default/objects/Actuals_Record__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <description>Resolved lookup to the Vehicle__c record matching the vehicle code on the order. Null when no Vehicle__c record matches Vehicle_Code__c.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Actuals Records</relationshipLabel>
    <relationshipName>Actuals_Records</relationshipName>
    <type>Lookup</type>
</CustomField>