force-app/main/default/objects/Actuals_Record__c/fields/Vehicle_Code__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Code__c</fullName>
    <description>Raw vehicle code from the Counterpoint file (e.g., BMF, GN, PN). Retained for audit and re-matching even when Vehicle__c is resolved.</description>
    <label>Vehicle Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>